updated some lines of text

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
 					<ul>
 						<p class="tag">Stamps.com/Auctane<br><span>Cloud Administrator | <span>2020-now</span></span></p>
 						<ul>
-							<li>Here I was part of the team building services in Azure from ground up. I made sure best practices were followed, managed deployments and infrastructure with gitops practices and Jenkins pipelines</li>
-							<li>Involved in setting up and managing APIM, Application gateway, Function apps, event hubs, Key vaults, AKS, monitoring & alerting, networking, storage accounts</li>
-							<li>Occasionally also supporting a dev team with AWS services</li>
+							<li> Text here </li>
+							<li>Text here</li>
+							<li>Text here</li>
 							<br>
 						</ul>
 						<p class="tag">Stamps.com<br><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
-							<li>Here I helped the client establish DevOps practices such as IaC, CI/CD, participated in designing</li>
-							<li>Migration to containerized services</li>
+							<li>Text here</li>
+							<li>Text here</li>
 							<br>
 						</ul>
 						<p class="tag">Stamps.com<br><span>Technical Support Representative | <span>2018-2019</span></span></p>
 						<ul>
-							<li>Everything from moving around fridges and TVs to collecting trash... yup, those were my beginnings</li>
+							<li>Text here</li>
 						</ul>
 						<p class="tag">Molina HealthCare<br><span>Associate Helpdesk Technician Intern | <span>2017</span></span></p>
 						<ul>
-							<li>Everything from moving around fridges and TVs to collecting trash... yup, those were my beginnings</li>
+							<li>Text here</li>
 						</ul>
 					</ul>
 				</div>
@@ -105,7 +105,7 @@
 						<p class="tag">This resume<br><span>inspired by <a href="https://cloudresumechallenge.dev" target="_blank" class="link">cloudresumechallenge.dev</a> | <span>2022</span></span></p>
 						<ul>
 							<li>Hosted on AWS S3</li>
-							<li>Code versioned on <a href="https://github.com/thrubovc/cloud_resume" target="_blank" class="link">my github</a></li>
+							<li>Code versioned on <a href="https://github.com/Louie-Cerv/cloud_resume" target="_blank" class="link">my github</a></li>
 							<li>Automatic deployment by AWS CodePipeline</li>
 							<li>Javascript visitor counter</li>
 							<li>API Gateway, Lambda and DynamoDB setup for the visitor counter</li>
