--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						</ul>
 						<p class="tag">Molina HealthCare<br><span>Associate Helpdesk Technician Intern | <span>2017</span></span></p>
 						<ul>
-							<li>Text here</li>
+							<li>Internship</li>
 						</ul>
 					</ul>
 				</div>
