--- a/website/index.html
+++ b/website/index.html
@@ -64,7 +64,7 @@
 					<ul>
 						<p class="tag">Stamps.com/Auctane<br><span>Cloud Administrator | <span>2020-now</span></span></p>
 						<ul>
-							<li> Text here </li>
+							<li>I script stuff</li>
 							<li>Text here</li>
 							<li>Text here</li>
 							<br>
