--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
 						<img id="social-thumbnail" src="github.png" alt="GitHub">
 					</a>
 				</div>
-				<p>DevOps | AWS | Azure | Kubernetes | Linux<br><span id="description">- 5 years of experience with linux/unix systems <br>- 5 years administrating cloud services <br>- I like new challenges and playing with tech at work and in spare time  <br>- I host a few services and domains for myself and others</span></p>
+				<p>SysAdmin | AWS | Azure | Windows | Linux<br><span id="description">- 5 years of experience with Windows/Linux systems <br>- 5 years administrating cloud services <br>- I like new challenges and playing with tech at work and in spare time  <br>- I host a few services and domains for myself and others</span></p>
 				<hr width="100%">
 				<div id="skills">
 					<p style="display:inline;">Skills</p><br>
