--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<img id="social-thumbnail" src="github.png" alt="GitHub">
 					</a>
 				</div>
-				<p>SysAdmin | AWS | Azure | Windows | Linux<br><span id="description">- 5 years of experience with Windows/Linux systems <br>- 5 years administrating cloud services <br>- I like new challenges and playing with tech at work and in spare time  <br>- I host a few services and domains for myself and others</span></p>
+				<p>SysAdmin | AWS | Azure | Windows | Linux<br><span id="description">- 5 years of experience with Windows/Linux systems <br>- 4 years administrating cloud services <br>- I like new challenges and playing with tech at work and in spare time  <br>- I host a few services and domains for myself and others</span></p>
 				<hr width="100%">
 				<div id="skills">
 					<p style="display:inline;">Skills</p><br>
@@ -87,17 +87,14 @@
 				</div>
 				<div class="page">
 					<p>&nbsp;&nbsp;&nbsp;Other projects</p>
-					<div style="float: right">Current temperature is <a id="temp"></a>&#8451;&nbsp;&nbsp;&nbsp;</div>
+					<!-- <div style="float: right">Current temperature is <a id="temp"></a>&#8451;&nbsp;&nbsp;&nbsp;</div> -->
 					<ul>
 						<p class="tag">Homelab<br><span>playing with stuff | <span>2019-now</span></span></p>
 						<ul>
 							<ul>2021 - pfSense router</ul>
-							<li>Home network split into several physical networks for different purposes</li>
-							<li>VLANs will be added later with networking hardware upgrade</li>
 							<ul>2020 - Proxmox hypervisor</ul>
 							<li>Self-managed NAS</li>
-							<li>In-house DNS server</li>
-							<li>TLS proxy for multiple domains hosted on and off this server, including this resume</li>
+							<li>Rasberry PI used for Pi-hole</li>
 							<li>Monitored with Prometheus&amp;Grafana</li>
 							<li>Several VMs with room to play with stuff</li>
 							<br>
@@ -106,10 +103,10 @@
 						<ul>
 							<li>Hosted on AWS S3</li>
 							<li>Code versioned on <a href="https://github.com/Louie-Cerv/cloud_resume" target="_blank" class="link">my github</a></li>
-							<li>Automatic deployment by AWS CodePipeline</li>
+							<li>Automatic deployment by Terraform with Github Actions</li>
 							<li>Javascript visitor counter</li>
 							<li>API Gateway, Lambda and DynamoDB setup for the visitor counter</li>
-							<li>Cloudflare for caching and DNS challenge</li>
+							<li>Cloudfront for caching and Route53 for DNS challenge</li>
 							<br>
 						</ul>
 					</ul>
