--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 					<ul>
 						<p class="tag">Stamps.com/Auctane<br><span>Cloud Administrator | <span>2020-now</span></span></p>
 						<ul>
-							<li>I script stuff</li>
-							<li>Text here</li>
-							<li>Text here</li>
+							<li>Worked on creating scripts that brought pushin deploys from 2+ hours to 10 minutes</li>
+							<li>Made some dashboards using Powershell with HTML to allow developers to self service</li>
+							<li></li>
 							<br>
 						</ul>
-						<p class="tag">Stamps.com<br><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
+						<span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
 							<li>Text here</li>
 							<li>Text here</li>
