updated job history

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 							<li></li>
 							<br>
 						</ul>
-						<span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
+						<p class="tag"><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
 							<li>Text here</li>
 							<li>Text here</li>
 							<br>
 						</ul>
-						<p class="tag">Stamps.com<br><span>Technical Support Representative | <span>2018-2019</span></span></p>
+						<p class="tag"><span>Technical Support Representative | <span>2018-2019</span></span></p>
 						<ul>
 							<li>Text here</li>
 						</ul>
