updated job history

--- a/index.html
+++ b/index.html
@@ -64,24 +64,27 @@
 					<ul>
 						<p class="tag">Stamps.com/Auctane<br><span>Cloud Administrator | <span>2020-now</span></span></p>
 						<ul>
-							<li>Worked on creating scripts that brought pushin deploys from 2+ hours to 10 minutes</li>
-							<li>Made some dashboards using Powershell with HTML to allow developers to self service</li>
-							<li></li>
+							<li>Created Powershell scripts that brought several deploys to production Wdindows Server machines from 2+ hours to 10 minutes</li>
+							<li>Made some dashboards accessible over the internal SAN using Powershell with HTML to allow developers to self service with server and configuration information</li>
 							<br>
 						</ul>
 						<p class="tag"><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
-							<li>Text here</li>
-							<li>Text here</li>
+							<li>Started as a DataCenter Operator while we moved from onprem to cloud</li>
+							<li>Managed hundreds of VMs through SCVMM and physical servers in the onpremise datacenter, anything from backups and storage to racking and stacking servers</li>
+							<li>Created new VMs or built new servers and deployed to production using either the F5 load balancer or AWS loadbalancing with autoscaling groups </li>
+							<li>On-call and was first line incident response for various splunk alerts monitoring our systems </li>
 							<br>
 						</ul>
 						<p class="tag"><span>Technical Support Representative | <span>2018-2019</span></span></p>
 						<ul>
-							<li>Text here</li>
+							<li>Handled 20+ calls daily helping customers with any software and website issues ranging from network issues to configuring batch config for thousands of online orders</li>
+							<li>Guided new customers on how to best navigate the company software and website to setup their online postage purchasing account</li>>
 						</ul>
 						<p class="tag">Molina HealthCare<br><span>Associate Helpdesk Technician Intern | <span>2017</span></span></p>
 						<ul>
-							<li>Internship</li>
+							<li>Worked 40 hours a week unpaid learning how to troubleshoot systems in an enterprise environment</li>
+							<li>Worked 40 hours a week unpaid learning how to troubleshoot systems in an enterprise environment</li>
 						</ul>
 					</ul>
 				</div>
