Typos fixed and spacing

--- a/index.html
+++ b/index.html
@@ -66,20 +66,19 @@
 						<ul>
 							<li>Created Powershell scripts that brought several deploys to production Wdindows Server machines from 2+ hours to 10 minutes</li>
 							<li>Made some dashboards accessible over the internal SAN using Powershell with HTML to allow developers to self service with server and configuration information</li>
-							<br>
 						</ul>
 						<p class="tag"><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
 							<li>Started as a DataCenter Operator while we moved from onprem to cloud</li>
 							<li>Managed hundreds of VMs through SCVMM and physical servers in the onpremise datacenter, anything from backups and storage to racking and stacking servers</li>
 							<li>Created new VMs or built new servers and deployed to production using either the F5 load balancer or AWS loadbalancing with autoscaling groups </li>
-							<li>On-call and was first line incident response for various splunk alerts monitoring our systems </li>
-							<br>
+							<li>On-call and was first line incident response with PagerDuty for various Splunk alerts monitoring our systems </li>
 						</ul>
 						<p class="tag"><span>Technical Support Representative | <span>2018-2019</span></span></p>
 						<ul>
-							<li>Handled 20+ calls daily helping customers with any software and website issues ranging from network issues to configuring batch config for thousands of online orders</li>
-							<li>Guided new customers on how to best navigate the company software and website to setup their online postage purchasing account</li>>
+							<li>Handled 20+ calls daily helping customers with any software and website issues ranging from network issues to configuring batch configs for thousands of online orders</li>
+							<li>Guided new customers on how to best navigate the company software and website to setup their online postage purchasing account</li>
+							<br>
 						</ul>
 						<p class="tag">Molina HealthCare<br><span>Associate Helpdesk Technician Intern | <span>2017</span></span></p>
 						<ul>
