--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<p id="name">Louie Cervantes<br></p>
 				<div id="sidepanel-section-title">Reach me here<br>
 					<a href="#" class="cryptedmail"
-						data-name="Cervantes"
-						data-surname="Louie13"
+						data-name="Louie"
+						data-surname="Cervantes95"
 						data-domain="gmail"
 						data-tld="com"
 						onclick="window.location.href = 'mailto:' + this.dataset.name + '.' + this.dataset.surname + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;">
