--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						<ul>
 							<li>Created Powershell scripts that brought several deploys to production Wdindows Server machines from 2+ hours to 10 minutes</li>
 							<li>Made some dashboards accessible over the internal SAN using Powershell with HTML to allow developers to self service with server and configuration information</li>
+							<li>Migrated our logging from Splunk to SumoLogic</li>
 						</ul>
 						<p class="tag"><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
