added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" type="text/css"/>
 		<script type="text/javascript" src="index.js" defer></script>
 	</head>
-
 	<body>
+		<button id="darkModeToggle">🌓</button>
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
@@ -25,11 +25,11 @@
 					</a>
 				</div>
 				<div id="sidepanel-section-title">
-					<a href="https://www.linkedin.com/in/louie-cervantes-a8914612a/" class="link" target="_blank">
+					<a href="https://www.linkedin.com/in/louie-cervantes-a8914612a/" class="link" target="_blank" rel="noopener noreferrer">
 						<img id="social-thumbnail" src="linkedin.png" alt="LinkedIn">
 					</a>
 					&nbsp;
-					<a href="https://github.com/Louie-Cerv/cloud_resume" class="link" target="_blank">
+					<a href="https://github.com/Louie-Cerv/cloud_resume" class="link" target="_blank" rel="noopener noreferrer">
 						<img id="social-thumbnail" src="github.png" alt="GitHub">
 					</a>
 				</div>
@@ -45,14 +45,17 @@
 					<p id="skill-stronger">Nagios</p>
 					<p id="skill-stronger">Terraform</p>
 					<p id="skill">Docker</p>
+					<p id="skill-stronger">PagerDuty</p>
+					<p id="skill">NewRelic</p>
 					<p id="skill-stronger">git</p>
 					<p id="skill-stronger">Splunk</p>
+					<p id="skill-stronger">SumoLogic</p>
 					<p id="skill">pfSense</p>					
 					<p id="skill">Proxmox</p>
 				</div>
 				<hr width="100%">
 				<div id="sidepanel-section-title">Certifications<br>
-					<a href="https://www.credly.com/earner/earned/badge/cf03b4e1-d39f-4c70-b3f6-8f6f0daf3f61" class="link" target="_blank">
+					<a href="https://www.credly.com/earner/earned/badge/cf03b4e1-d39f-4c70-b3f6-8f6f0daf3f61" class="link" target="_blank" rel="noopener noreferrer">
 						<img id="cert-thumbnail" src="AWS-CloudPractitioner.png" alt="AWS Certified Cloud Practitioner">
 					</a>
 				</div>
@@ -92,18 +95,18 @@
 					<ul>
 						<p class="tag">Homelab<br><span>playing with stuff | <span>2019-now</span></span></p>
 						<ul>
-							<ul>2021 - pfSense router</ul>
-							<ul>2020 - Proxmox hypervisor</ul>
+							<il>2021 - pfSense router</il>
+							<il>2020 - Proxmox hypervisor</il>
 							<li>Self-managed NAS</li>
 							<li>Rasberry PI used for Pi-hole</li>
 							<li>Monitored with Prometheus&amp;Grafana</li>
 							<li>Several VMs with room to play with stuff</li>
 							<br>
 						</ul>
-						<p class="tag">This resume<br><span>inspired by <a href="https://cloudresumechallenge.dev" target="_blank" class="link">cloudresumechallenge.dev</a> | <span>2022</span></span></p>
+						<p class="tag">This resume<br><span>inspired by <a href="https://cloudresumechallenge.dev" target="_blank" class="link" rel="noopener noreferrer">cloudresumechallenge.dev</a> | <span>2022</span></span></p>
 						<ul>
 							<li>Hosted on AWS S3</li>
-							<li>Code versioned on <a href="https://github.com/Louie-Cerv/cloud_resume" target="_blank" class="link">my github</a></li>
+							<li>Code versioned on <a href="https://github.com/Louie-Cerv/cloud_resume" target="_blank" class="link" rel="noopener noreferrer">my github</a></li>
 							<li>Automatic deployment by Terraform with Github Actions</li>
 							<li>Javascript visitor counter</li>
 							<li>API Gateway, Lambda and DynamoDB setup for the visitor counter</li>
