updated css for toggle

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<script type="text/javascript" src="index.js" defer></script>
 	</head>
 	<body>
-		<button id="darkModeToggle">🌓</button>
+		<button id="darkModeToggle">
+			<img src="moon-icon.png" alt="Dark Mode" />
+		  </button>		  
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
