update image for dorkmode

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 		<script type="text/javascript" src="index.js" defer></script>
 	</head>
 	<body>
-		<button id="darkModeToggle">
-			<img src="moon-icon.png" alt="Dark Mode" />
-		  </button>		  
+		<button id="darkModeToggle">🌙</button>  
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
