--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="index.js" defer></script>
 	</head>
 	<body>
-		<button id="darkModeToggle">🌙</button>  
+		<button id="darkModeToggle">DARKMODE</button>  
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
@@ -69,7 +69,9 @@
 						<ul>
 							<li>Created Powershell scripts that brought several deploys to production Wdindows Server machines from 2+ hours to 10 minutes</li>
 							<li>Made some dashboards accessible over the internal SAN using Powershell with HTML to allow developers to self service with server and configuration information</li>
-							<li>Migrated our logging from Splunk to SumoLogic</li>
+							<li>Migrated our logging from Splunk to SumoLogic and reduced our PagerDuty alerts by 67%</li>
+							<li>Developed PowerShell automation to identify and retire AWS EC2 Auto Scaling Groups without a Load Balancer, cutting AWS EC2 AutoScaling Group costs by $33K in
+								one month (~$400K annually)</li>
 						</ul>
 						<p class="tag"><span>Associate Cloud Administrator | <span>2019-2020</span></span></p>
 						<ul>
@@ -93,14 +95,16 @@
 				<div class="page">
 					<p>&nbsp;&nbsp;&nbsp;Other projects</p>
 					<ul>
-						<p class="tag">Homelab<br><span>playing with stuff | <span>2019-now</span></span></p>
+						<p class="tag">Homelab<br><span>Playing with stuff | <span>2019-now</span></span></p>
 						<ul>
-							<il>2021 - pfSense router</il>
-							<il>2020 - Proxmox hypervisor</il>
+							<li>2020 - Proxmox hypervisor</il>
+							<li>2021 - pfSense router</li>
 							<li>Self-managed NAS</li>
 							<li>Rasberry PI used for Pi-hole</li>
-							<li>Monitored with Prometheus&amp;Grafana</li>
+							<li>self hosted media stack for family</li>
+							<li>Monitored with Prometheus &amp; Grafana</li>
 							<li>Several VMs with room to play with stuff</li>
+							<li>Host game servers for friends such as Ark and Valheim</li>
 							<br>
 						</ul>
 						<p class="tag">This resume<br><span>inspired by <a href="https://cloudresumechallenge.dev" target="_blank" class="link" rel="noopener noreferrer">cloudresumechallenge.dev</a> | <span>2022</span></span></p>
